Fix: Support last update

--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -4,5 +4,5 @@
 
   "button.back": "Geri",
   "button.language": "Dili Değiştir",
-  "last_update": "Last Update"
+  "last_update": "Son güncelleme"
 }
