--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -5,8 +5,8 @@
   "data.city_accommodation.title": "Places to stay in {{city}}",
   "data.city_accommodation.subtitle": "All locations on this page have been verified by phone, except those mentioned in it. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
   "data.city_accommodation.explanation": "stated that it will provide accommodation for earthquake victims.",
-  "data.city-accommodation.link_explanation_p1": "You can reach detailed information",
-  "data.city-accommodation.link_explanation_p2": "from this link",
+  "data.city_accommodation.link_explanation_p1": "You can reach detailed information",
+  "data.city_accommodation.link_explanation_p2": "from this link",
   "data.city_accommodation.not_validated": "Note: This information has not been verified by phone.",
   "data.gathering.title": "Safe Gathering Areas in {{city}}",
   "data.help_item.title": "Goods Help Areas in {{city}}",
