--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -11,7 +11,8 @@
   "data.gathering.title": "Safe Gathering Areas in {{city}}",
   "data.help_item.title": "Goods Help Areas in {{city}}",
   "data.important_phone_numbers.title": "Important Phone Numbers",
-
+  "data.phone_number.link_explanation_p1": "You can call",
+  "data.phone_number.link_explanation_p2": "for detailed information",
   "button.back": "Back",
   "button.language": "Change Language",
   "last_update": "Last Update",
