Feat: Add more translation data

--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -9,12 +9,27 @@
   "data.city_accommodation.link_explanation_p2": "from this link",
   "data.city_accommodation.not_validated": "Note: This information has not been verified by phone.",
   "data.gathering.title": "Safe Gathering Areas in {{city}}",
-  "data.help_item.title": "Goods Help Areas in {{city}}",
+  "data.help_item.title": "Item Donation Areas in {{city}}",
   "data.important_phone_numbers.title": "Important Phone Numbers",
+  "data.important_web_sites.title": "Important Web Sites",
+  "data.important_web_sites.subtitle": "Here are the links you may need.",
+  "data.important_articles.title": "Useful Articles",
+  "data.important_articles.subtitle": "You can find useful articles about the post-earthquake below.",
+  "data.stem_cell.title": "Stem Cell Donation Points",
   "data.phone_number.link_explanation_p1": "You can call",
   "data.phone_number.link_explanation_p2": "for detailed information",
+  "data_blood_donation": "Blood Donation Blood",
+
   "button.back": "Back",
   "button.language": "Change Language",
   "last_update": "Last Update",
-  "map": "Map"
+  "map": "Map",
+  "in_charge": "In Charge",
+  "unit": "Unit",
+  "telephone":  "Telephone",
+  "address": "Address",
+  "city": "City",
+  "district": "District",
+  "region": "Region",
+  "location": "Location"
 }
