--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -19,6 +19,7 @@
   "data.phone_number.link_explanation_p1": "Detaylar için",
   "data.phone_number.link_explanation_p2": "numarasını arayabilirsiniz",
   "data_blood_donation": "Kan Bağış Noktası",
+  "data.city_accommodation.general": " adresinden geçici konaklama için talepte bulunabilir ya da depremzedeler ile konaklama paylaşabilirsiniz",
 
   "button.back": "Geri",
   "button.language": "Dili Değiştir",
