--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -19,6 +19,7 @@
   "data.phone_number.link_explanation_p1": "You can call",
   "data.phone_number.link_explanation_p2": "for detailed information",
   "data_blood_donation": "Blood Donation Blood",
+  "data.city_accommodation.general": " with this url you can find or share accommodation.",
 
   "button.back": "Back",
   "button.language": "Change Language",
