Feat: Add missing translations

--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -15,6 +15,10 @@
   "data.important_web_sites.subtitle": "İhtiyacınız olabilecek linklere buradan ulaşabilirsiniz.",
   "data.important_articles.title": "Faydalı Yazılar",
   "data.important_articles.subtitle": "Deprem sonrası ile alakalı faydalı yazıları aşağıda bulabilirsiniz.",
+  "data.veterinary.title": "{{city}} Şehrinde Ücretsiz Yardım Alabileceğiniz Veterinerler",
+  "data.veterinary.subtitle": "Bu sayfadaki tüm veterinerler telefonla doğrulanmıştır. Ancak günler, hatta saatler içerisinde bu bilgiler değişebildiğinden dolayı, kendi araştırmanızı yapmanız önemle rica edilir.",
+  "data.food_distribution.title": "{{city}}, {{county}} Ücretsiz Yemek Dağıtım Yerleri",
+  "data.food_distribution.subtitle": "Bu sayfadaki tüm yerler telefonla doğrulanmıştır. Ancak günler, hatta saatler içerisinde bu bilgiler değişebildiğinden dolayı, kendi araştırmanızı yapmanız önemle rica edilir.",
   "data.stem_cell.title": "Kök Hücre Bağış Noktaları",
   "data.phone_number.link_explanation_p1": "Detaylar için",
   "data.phone_number.link_explanation_p2": "numarasını arayabilirsiniz",
