--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -15,6 +15,10 @@
   "data.important_web_sites.subtitle": "Here are the links you may need.",
   "data.important_articles.title": "Useful Articles",
   "data.important_articles.subtitle": "You can find useful articles about the post-earthquake below.",
+  "data.veterinary.title": "Veterinarians You Can Get Free Help In {{city}}",
+  "data.veterinary.subtitle": "All vets on this page are phone verified. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
+  "data.food_distribution.title": "{{city}}, {{county}} Free Food Delivery Locations",
+  "data.food_distribution.subtitle": "All locations on this page have been verified by phone. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
   "data.stem_cell.title": "Stem Cell Donation Points",
   "data.phone_number.link_explanation_p1": "You can call",
   "data.phone_number.link_explanation_p2": "for detailed information",
@@ -26,7 +30,7 @@
   "map": "Map",
   "in_charge": "In Charge",
   "unit": "Unit",
-  "telephone":  "Telephone",
+  "telephone": "Telephone",
   "address": "Address",
   "city": "City",
   "district": "District",
