--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -31,5 +31,6 @@
   "city": "Şehir",
   "district": "İlçe",
   "region": "Bölge",
-  "location": "Konum"
+  "location": "Konum",
+  "details": "Detaylar"
 }
