--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -31,5 +31,6 @@
   "city": "City",
   "district": "District",
   "region": "Region",
-  "location": "Location"
+  "location": "Location",
+  "details": "Details"
 }
