Fix: Add missing translations

--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -19,6 +19,11 @@
   "data.veterinary.subtitle": "Bu sayfadaki tüm veterinerler telefonla doğrulanmıştır. Ancak günler, hatta saatler içerisinde bu bilgiler değişebildiğinden dolayı, kendi araştırmanızı yapmanız önemle rica edilir.",
   "data.food_distribution.title": "{{city}}, {{county}} Ücretsiz Yemek Dağıtım Yerleri",
   "data.food_distribution.subtitle": "Bu sayfadaki tüm yerler telefonla doğrulanmıştır. Ancak günler, hatta saatler içerisinde bu bilgiler değişebildiğinden dolayı, kendi araştırmanızı yapmanız önemle rica edilir.",
+  "data.food_distribution.detail_main": "Detaylı bilgi için ",
+  "data.food_distribution.detail_call": "'i arayabilirsiniz.",
+  "data.food_distribution.detail_inspect": "inceleyebilirsiniz",
+  "data.food_distribution.detail_mix": "'i arayabilirsiniz ya da ",
+  "data.food_distribution.detail_website": "bu web sitesini",
   "data.stem_cell.title": "Kök Hücre Bağış Noktaları",
   "data.phone_number.link_explanation_p1": "Detaylar için",
   "data.phone_number.link_explanation_p2": "numarasını arayabilirsiniz",
@@ -26,6 +31,7 @@
 
   "button.back": "Geri",
   "button.language": "Dili Değiştir",
+  "button.google_maps": "Google Maps Linki",
   "last_update": "Son güncelleme",
   "map": "Harita",
   "in_charge": "Sorumlu",
