--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -19,6 +19,11 @@
   "data.veterinary.subtitle": "All vets on this page are phone verified. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
   "data.food_distribution.title": "{{city}}, {{county}} Free Food Delivery Locations",
   "data.food_distribution.subtitle": "All locations on this page have been verified by phone. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
+  "data.food_distribution.detail_main": "For detailed information you can check ",
+  "data.food_distribution.detail_call": "",
+  "data.food_distribution.detail_inspect": "",
+  "data.food_distribution.detail_mix": " or you can check ",
+  "data.food_distribution.detail_website": "this website",
   "data.stem_cell.title": "Stem Cell Donation Points",
   "data.phone_number.link_explanation_p1": "You can call",
   "data.phone_number.link_explanation_p2": "for detailed information",
@@ -26,6 +31,7 @@
 
   "button.back": "Back",
   "button.language": "Change Language",
+  "button.google_maps": "Google Maps Link",
   "last_update": "Last Update",
   "map": "Map",
   "in_charge": "In Charge",
