--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -1,50 +1,50 @@
 {
-  "page.main.title": "Main Page",
-  "page.main.subtitle": "Please select a topic.",
+  "page.main.title": "الصفحة الرئيسية",
+  "page.main.subtitle": "الرجاء تحديد الموضوع الذي تريد تلقي معلومات عنه",
 
-  "data.city_accommodation.title": "Places to stay in {{city}}",
-  "data.city_accommodation.subtitle": "All locations on this page have been verified by phone, except those mentioned in it. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
-  "data.city_accommodation.explanation": "stated that it will provide accommodation for earthquake victims.",
-  "data.city_accommodation.link_explanation_p1": "You can reach detailed information",
-  "data.city_accommodation.link_explanation_p2": "from this link",
-  "data.city_accommodation.not_validated": "Note: This information has not been verified by phone.",
-  "data.gathering.title": "Safe Gathering Areas in {{city}}",
-  "data.help_item.title": "Item Donation Areas in {{city}}",
-  "data.important_phone_numbers.title": "Important Phone Numbers",
-  "data.important_web_sites.title": "Important Web Sites",
-  "data.important_web_sites.subtitle": "Here are the links you may need.",
-  "data.important_articles.title": "Useful Articles",
-  "data.important_articles.subtitle": "You can find useful articles about the post-earthquake below.",
-  "data.veterinary.title": "Veterinarians You Can Get Free Help In {{city}}",
-  "data.veterinary.subtitle": "All vets on this page are phone verified. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
-  "data.food_distribution.title": "{{city}}, {{county}} Free Food Delivery Locations",
-  "data.food_distribution.subtitle": "All locations on this page have been verified by phone. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
-  "data.food_distribution.detail_main": "For detailed information you can check ",
-  "data.food_distribution.detail_call": "",
-  "data.food_distribution.detail_inspect": "",
-  "data.food_distribution.detail_mix": " or you can check ",
-  "data.food_distribution.detail_website": "this website",
-  "data.stem_cell.title": "Stem Cell Donation Points",
-  "data.phone_number.link_explanation_p1": "You can call",
-  "data.phone_number.link_explanation_p2": "for detailed information",
-  "data_blood_donation": "Blood Donation Blood",
-  "data.vpn.title": "For internet connection issues you can use below VPNs",
-  "data.vpn.subtitle": "VPN allows you to access blocked sites.",
+  "data.city_accommodation.title": "{{city}} أماكن للإقامة في مدينة / أماكن للإقامة",
+  "data.city_accommodation.subtitle": "تم التحقق من جميع المواقع في هذه الصفحة عبر الهاتف ، باستثناء المواقع المذكورة في هذه الصفحة ، ولكن نظرًا لأن هذه المعلومات يمكن أن تتغير في غضون أيام أو حتى ساعات ، فيُطلب منك التفضل بإجراء البحث الخاص بك.",
+  "data.city_accommodation.explanation": "وأخبر  بأنه سيوفر أماكن إقامة لضحايا الزلزال.",
+  "data.city_accommodation.link_explanation_p1": " للحصول على التفاصيل",
+  "data.city_accommodation.link_explanation_p2": "يمكنك الوصول إليه من هذا الرابط",
+  "data.city_accommodation.not_validated": "ملحوظة: لم نتمكن من التحقق من هذه المعلومات عبر الهاتف",
+  "data.gathering.title": "{{city}} Şehrinde مناطق تجميع آمنة",
+  "data.help_item.title": "{{city}} فرص التبرع بالعناصر",
+  "data.important_phone_numbers.title": "أرقام هواتف مهمة ",
+  "data.important_web_sites.title": " مُرْتَادِي الشَّبَكَة مهمة",
+  "data.important_web_sites.subtitle": " هنا يمكنك العثور على الروابط التي قد تحتاجها هنا",
+  "data.important_articles.title": "صوص مفيدة",
+  "data.important_articles.subtitle": "يمكنك العثور أدناه  على مقالات مفيدة حول ما بعد الزلزال.",
+  "data.veterinary.title": "{{city}} الأطباء البيطريون في مدينة...... حيث يمكنك الحصول على مساعدة مجانية",
+  "data.veterinary.subtitle": "تم التحقق من جميع المواقع في هذه الصفحة عبر الهاتف ، باستثناء المواقع المذكورة في هذه الصفحة ، ولكن نظرًا لأن هذه المعلومات يمكن أن تتغير في غضون أيام أو حتى ساعات ، فيُطلب منك التفضل بإجراء البحث الخاص بك",
+  "data.food_distribution.title": "{{city}}, {{county}} مواقع توصيل الطعام",
+  "data.food_distribution.subtitle": "تم التحقق من جميع المواقع في هذه الصفحة عبر الهاتف ، باستثناء المواقع المذكورة في هذه الصفحة ، ولكن نظرًا لأن هذه المعلومات يمكن أن تتغير في غضون أيام أو حتى ساعات ، فيُطلب منك التفضل بإجراء البحث الخاص بك.",
+  "data.food_distribution.detail_main": " يمكنك الاتصال بنا للحصول على معلومات مفصلة. ",
+  "data.food_distribution.detail_call": "' يمكنك الاتصال بنا للحصول على معلومات مفصلة.",
+  "data.food_distribution.detail_inspect": "يمكنك المراجعة",
+  "data.food_distribution.detail_mix": "'يمكنك الاتصال برقم ",
+  "data.food_distribution.detail_website": "هذا المَوْقِع الإِلَكْتُرُونِيّ",
+  "data.stem_cell.title": "نقاط التبرع بالخلايا الجذعية",
+  "data.phone_number.link_explanation_p1": "للحصول على التفاصيل",
+  "data.phone_number.link_explanation_p2": "للحصول على التفاصيل",
+  "data_blood_donation": "نقاط الهلال الأحمر للتبرع بالدم",
+  "data.vpn.title": "يمكنك استخدام الشبكات الافتراضية الخاصة المجانية التالية للاتصال بالإنترنت",
+  "data.vpn.subtitle": "تتيح لك الشّبكة الافْتراضيّة الخَاصَّة الوصول إلى  المواقع الإلكترونية المحجوبة",
 
-  "button.back": "Back",
-  "button.language": "Change Language",
-  "button.google_maps": "Google Maps Link",
-  "last_update": "Last Update",
-  "name": "Name",
-  "map": "Map",
-  "in_charge": "In Charge",
-  "unit": "Unit",
-  "telephone": "Telephone",
-  "address": "Address",
-  "city": "City",
-  "district": "District",
-  "region": "Region",
-  "location": "Location",
-  "details": "Details",
-  "website": "Website"
+  "button.back": "السابق",
+  "button.language": "تغيير",
+  "button.google_maps": "رابط خرائط جوجل",
+  "last_update": "اخر تحديث",
+  "name": "اسم",
+  "map": "خَرِيطَة",
+  "in_charge": " الشخص مسؤول",
+  "unit": " المؤسسة",
+  "telephone": "رقم الهاتف",
+  "address": "عنوان",
+  "city": "مدينة",
+  "district": "مقاطعة",
+  "region": "منطقة",
+  "location": "الموقع",
+  "details": "تفاصيل",
+  "website": "مَوْقِع إِلَكْتُرُونِيّ"
 }
