--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -1,50 +1,45 @@
 {
-  "page.main.title": "Main Page",
-  "page.main.subtitle": "Please select a topic.",
+  "page.main.title": "Malper",
+  "page.main.subtitle": "Ji kerema xwe mijara ku hûn dixwazin agahdarî li ser bigirin hilbijêrin",
 
-  "data.city_accommodation.title": "Places to stay in {{city}}",
-  "data.city_accommodation.subtitle": "All locations on this page have been verified by phone, except those mentioned in it. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
-  "data.city_accommodation.explanation": "stated that it will provide accommodation for earthquake victims.",
-  "data.city_accommodation.link_explanation_p1": "You can reach detailed information",
-  "data.city_accommodation.link_explanation_p2": "from this link",
-  "data.city_accommodation.not_validated": "Note: This information has not been verified by phone.",
-  "data.gathering.title": "Safe Gathering Areas in {{city}}",
-  "data.help_item.title": "Item Donation Areas in {{city}}",
-  "data.important_phone_numbers.title": "Important Phone Numbers",
-  "data.important_web_sites.title": "Important Web Sites",
-  "data.important_web_sites.subtitle": "Here are the links you may need.",
-  "data.important_articles.title": "Useful Articles",
-  "data.important_articles.subtitle": "You can find useful articles about the post-earthquake below.",
-  "data.veterinary.title": "Veterinarians You Can Get Free Help In {{city}}",
-  "data.veterinary.subtitle": "All vets on this page are phone verified. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
-  "data.food_distribution.title": "{{city}}, {{county}} Free Food Delivery Locations",
-  "data.food_distribution.subtitle": "All locations on this page have been verified by phone. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
-  "data.food_distribution.detail_main": "For detailed information you can check ",
-  "data.food_distribution.detail_call": "",
-  "data.food_distribution.detail_inspect": "",
-  "data.food_distribution.detail_mix": " or you can check ",
-  "data.food_distribution.detail_website": "this website",
-  "data.stem_cell.title": "Stem Cell Donation Points",
-  "data.phone_number.link_explanation_p1": "You can call",
-  "data.phone_number.link_explanation_p2": "for detailed information",
-  "data_blood_donation": "Blood Donation Blood",
-  "data.vpn.title": "For internet connection issues you can use below VPNs",
-  "data.vpn.subtitle": "VPN allows you to access blocked sites.",
+  "data.city_accommodation.title": "{{city}} cihên mayînê",
+  "data.city_accommodation.subtitle": "Hemî cîhên li ser vê rûpelê bi têlefonê hatine verast kirin, ji bilî yên ku tê de hatine destnîşan kirin. Lêbelê, ji ber ku ev agahdarî dikare di nav çend rojan an jî demjimêran de biguhere, ji kerema xwe lêkolîna xwe bikin",
+  "data.city_accommodation.explanation": "ragihand ku ew ê ji bo mexdûrên erdhejê cihan peyda bikin",
+  "data.city_accommodation.link_explanation_p1": "Ji bo agahdariya berfireh",
+  "data.city_accommodation.link_explanation_p2": "bu linkten ulaşabilirsiniz",
+  "data.city_accommodation.not_validated": "Nîşe: Me nekarî bi têlefonê vê agahiyê verast bikin.       ",
+  "data.gathering.title": "{{city}} Cihên kombûna ewle li bajêr",
+  "data.help_item.title": "{{city}} Cihên alîkariya babetê",
+  "data.important_phone_numbers.title": "Numareyên girîng",
+  "data.important_web_sites.title": "Malperên girîng",
+  "data.important_web_sites.subtitle": " Li vir girêdanên ku hûn hewce ne hene ",
+  "data.important_articles.title": "Nivîsên kêrhatî",
+  "data.important_articles.subtitle": "Hûn dikarin li jêr nivîsên kêrhatî yên derbarê piştî erdhejê de bibînin..",
+  "data.veterinary.title": "{{city}} Alîkariya veterînerî ya bêpere",
+  "data.veterinary.subtitle": "Hemî numareyê veterîneran yên li ser vê rûpelê bi têlefonê hatine verast kirin. Lêbelê, ji ber ku ev agahdarî dikare di nav çend rojan an jî saetan de biguhere, ji we tê xwestin ku hûn lêkolîna xwe bikin.",
+  "data.food_distribution.title": "{{city}}, {{county}} Cihên carina bêpere",
+  "data.food_distribution.subtitle": "Hemî cihên li ser vê rûpelê bi têlefonê hatine verast kirin. Lêbelê, ji ber ku ev agahdarî dikare di nav çend rojan an jî saetan de biguhere, ji we tê xwestin ku hûn lêkolîna xwe bikin.",
+  "data.food_distribution.detail_main": " Ji bo agahdariya berfireh  ",
+  "data.food_distribution.detail_call": "'karin li vê numareyê bigerin.",
+  "data.food_distribution.detail_inspect": "Hûn dikarin lêkolîn bikin  ",
+  "data.food_distribution.detail_mix": "'Hûn dikarin li vê numareyê bigerin an jî ",
+  "data.food_distribution.detail_website": "Vê malperê",
+  "data.stem_cell.title": "Cihên bo bexşîna xaneyî bineretiyê   ",
+  "data.phone_number.link_explanation_p1": "Bo Hûgulî",
+  "data.phone_number.link_explanation_p2": "Hûn dikarin li vê numareyê bigerin",
+  "data_blood_donation": "Cihên bo bexşîna xwînê",
 
-  "button.back": "Back",
-  "button.language": "Change Language",
-  "button.google_maps": "Google Maps Link",
-  "last_update": "Last Update",
-  "name": "Name",
-  "map": "Map",
-  "in_charge": "In Charge",
-  "unit": "Unit",
-  "telephone": "Telephone",
-  "address": "Address",
-  "city": "City",
-  "district": "District",
-  "region": "Region",
-  "location": "Location",
-  "details": "Details",
-  "website": "Website"
+  "button.back": "paş  ",
+  "button.language": "Ziman biguherîne",
+  "button.google_maps": "Girêdana Google Mapsê ",
+  "last_update": "nûvekirina dawîn",
+  "map": "Qert",
+  "in_charge": "Berpirsiyar",
+  "unit": "Yekîne",
+  "telephone": "Telefon",
+  "address": "navnîşan",
+  "city": "Bajar",
+  "district": "Navçe",
+  "region": "Herêm",
+  "location": "Cîh"
 }
