fix missing translations

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -12,8 +12,8 @@
   "data.help_item.title": "{{city}} فرص التبرع بالعناصر",
   "data.important_phone_numbers.title": "أرقام هواتف مهمة ",
   "data.important_web_sites.title": " مُرْتَادِي الشَّبَكَة مهمة",
-  "data.important_web_sites.subtitle": " هنا يمكنك العثور على الروابط التي قد تحتاجها هنا",
-  "data.important_articles.title": "صوص مفيدة",
+  "data.important_web_sites.subtitle": " هنا يمكنك العثور على الروابط التي قد تحتاجها ",
+  "data.important_articles.title": "نصوص مفيدة",
   "data.important_articles.subtitle": "يمكنك العثور أدناه  على مقالات مفيدة حول ما بعد الزلزال.",
   "data.veterinary.title": "{{city}} الأطباء البيطريون في مدينة...... حيث يمكنك الحصول على مساعدة مجانية",
   "data.veterinary.subtitle": "تم التحقق من جميع المواقع في هذه الصفحة عبر الهاتف ، باستثناء المواقع المذكورة في هذه الصفحة ، ولكن نظرًا لأن هذه المعلومات يمكن أن تتغير في غضون أيام أو حتى ساعات ، فيُطلب منك التفضل بإجراء البحث الخاص بك",
