fix responsiveness of gathering

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -46,5 +46,6 @@
   "region": "منطقة",
   "location": "الموقع",
   "details": "تفاصيل",
-  "website": "مَوْقِع إِلَكْتُرُونِيّ"
+  "website": "مَوْقِع إِلَكْتُرُونِيّ",
+  "source": "مصدر"
 }
