--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -46,5 +46,6 @@
   "region": "Region",
   "location": "Location",
   "details": "Details",
-  "website": "Website"
+  "website": "Website",
+  "source": "Source"
 }
