--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -46,5 +46,6 @@
   "region": "Bölge",
   "location": "Konum",
   "details": "Detaylar",
-  "website": "Websitesi"
+  "website": "Websitesi",
+  "source": "Kaynak"
 }
