--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -46,5 +46,6 @@
   "region": "Herêm",
   "location": "Cîh",
   "details": " Hûrgilî",
-  "website": " Malper"
+  "website": " Malper",
+  "source": "Çavkaniyê"
 }
