--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -3,7 +3,7 @@
   "page.main.subtitle": "Lütfen bilgi almak istediğiniz konuyu seçiniz.",
   "page.about.title": "Hakkımızda / İletişim",
   "page.about.body.1": "afetbilgi.com bir grup ODTÜ öğrencisi ve mezunu tarafından hazırlanan, 6 Şubat 2023 Pazarcık Depremi ile mücadelede önemli bilgilerin doğrulanarak hem afetzedelere, hem de yardımcı olmak isteyenlere ulaştırılması için kurulmuş bir internet sitesidir.",
-  "page.about.body.2": "Tamamen insan eliyle oluşturulan bir veri tabanına dayanan sitenin işleyişindeki temel prensipler doğruluk, hız, ve basitliktir. Bizimle iletişime geçerken, sizden yalnızca teyitli bilgileri iletmenizi, yanlış haberlerin yayılmasında bizle birlikte çabalamanızı rica ederiz.",
+  "page.about.body.2": "Tamamen insan eliyle oluşturulan bir veri tabanına dayanan sitenin işleyişindeki temel prensipler doğruluk, hız, ve basitliktir. Bizimle iletişime geçerken, sizden yalnızca teyitli bilgileri iletmenizi, yanlış haberlerin yayılmasıni engellemek için bizle birlikte çabalamanızı rica ederiz.",
 
   "data.city_accommodation.title": "{{city}} Şehrinde Kalacak Yerler",
   "data.city_accommodation.subtitle": "Bu sayfada, içerisinde belirtilenler hariç tüm yerler telefonla doğrulanmıştır. Ancak günler, hatta saatler içerisinde bu bilgiler değişebildiğinden dolayı, kendi araştırmanızı yapmanız önemle rica edilir.",
