fix minor mistakes

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -50,5 +50,6 @@
   "location": "الموقع",
   "details": "تفاصيل",
   "website": "مَوْقِع إِلَكْتُرُونِيّ",
+  "source": "مصدر",
   "contact": "تواصل"
 }
