--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -50,6 +50,6 @@
   "location": "Cîh",
   "details": " Hûrgilî",
   "website": " Malper",
-  "contact": "Têkelî",
-  "source": "Çavkaniyê"
+  "source": "Çavkaniyê",
+  "contact": "Têkelî"
 }
