--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -3,7 +3,7 @@
   "page.main.subtitle": "Lütfen bilgi almak istediğiniz konuyu seçiniz.",
   "page.about.title": "Hakkımızda / İletişim",
   "page.about.body.1": "afetbilgi.com bir grup ODTÜ öğrencisi ve mezunu tarafından hazırlanan, 6 Şubat 2023 Pazarcık Depremi ile mücadelede önemli bilgilerin doğrulanarak hem afetzedelere, hem de yardımcı olmak isteyenlere ulaştırılması için kurulmuş bir internet sitesidir.",
-  "page.about.body.2": "Tamamen insan eliyle oluşturulan bir veri tabanına dayanan sitenin işleyişindeki temel prensipler doğruluk, hız, ve basitliktir. Bizimle iletişime geçerken, sizden yalnızca teyitli bilgileri iletmenizi, yanlış haberlerin yayılmasıni engellemek için bizle birlikte çabalamanızı rica ederiz.",
+  "page.about.body.2": "Tamamen insan eliyle oluşturulan bir veri tabanına dayanan sitenin işleyişindeki temel prensipler doğruluk, hız, ve basitliktir. Bizimle iletişime geçerken, sizden yalnızca teyitli bilgileri iletmenizi, yanlış haberlerin yayılmasını engellemek için bizle birlikte çabalamanızı rica ederiz.",
 
   "data.city_accommodation.title": "{{city}} Şehrinde Kalacak Yerler",
   "data.city_accommodation.subtitle": "Bu sayfada, içerisinde belirtilenler hariç tüm yerler telefonla doğrulanmıştır. Ancak günler, hatta saatler içerisinde bu bilgiler değişebildiğinden dolayı, kendi araştırmanızı yapmanız önemle rica edilir.",
@@ -31,7 +31,7 @@
   "data.phone_number.link_explanation_p1": "Detaylar için",
   "data.phone_number.link_explanation_p2": "numarasını arayabilirsiniz",
   "data_blood_donation": "Kan Bağış Noktası",
-  "data.vpn.title": "Internete bağlanmak için aşapıdaki ücretsiz VPN'leri kullanabilirsiniz.",
+  "data.vpn.title": "İnternete bağlanmak için aşağıdaki ücretsiz VPN'leri kullanabilirsiniz.",
   "data.vpn.subtitle": "VPN bloklanan sitelere girmenizi sağlar.",
 
   "button.back": "Geri",
@@ -50,6 +50,6 @@
   "location": "Konum",
   "details": "Detaylar",
   "website": "Websitesi",
-  "contact": "İletişim",
-  "source": "Kaynak"
+  "source": "Kaynak",
+  "contact": "İletişim"
 }
