--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -33,6 +33,7 @@
   "data_blood_donation": "Blood Donation Blood",
   "data.vpn.title": "For internet connection issues you can use below VPNs",
   "data.vpn.subtitle": "VPN allows you to access blocked sites.",
+  "data.container_pharmacy": "Container Pharmacy",
 
   "button.back": "Back",
   "button.language": "Change Language",
