--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -31,6 +31,7 @@
   "data.phone_number.link_explanation_p1": "Detaylar için",
   "data.phone_number.link_explanation_p2": "numarasını arayabilirsiniz",
   "data_blood_donation": "Kan Bağış Noktası",
+  "data.container_pharmacy": "Konteyner Eczane",
   "data.vpn.title": "İnternete bağlanmak için aşağıdaki ücretsiz VPN'leri kullanabilirsiniz.",
   "data.vpn.subtitle": "VPN bloklanan sitelere girmenizi sağlar.",
 
