--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -2,8 +2,8 @@
   "page.main.title": "Malper",
   "page.main.subtitle": "Ji kerema xwe mijara ku hûn dixwazin agahdarî li ser bigirin hilbijêrin",
   "page.about.title": "Der barê me de / Têkelî",
-  "page.about.body.1": "afetbilgi.com is a website prepared by a group of METU students and graduates to verify important information in the fight against the 6 February 2023 Pazarcık Earthquake and to deliver it to both disaster victims and those who want to help.",
-  "page.about.body.2": "The basic principles of the website, which is based on a completely human-made database, are accuracy, speed, and simplicity. When contacting us, we ask you to provide only confirmed information and to work with us to prevent the spread of false information.",
+  "page.about.body.1": "afetbilgi.com malperek e ku ji aliyê komek xwendekar û mezûnên ODTU ve hatiye amadekirin da ku di têkoşîna li dijî Erdheja 6ê Sibata 2023-an a Bazarcixê de agahiyên girîng verast bike û ewan bi mexdûrên karesatê  û yên ku dixwazin alîkariyê bidin re parve bike.",
+  "page.about.body.2": "Prensîbên bingehîn ên malperê, ku li ser bingehek bi tevahî ji hêla mirovan ve hatî çêkirin, rastbûn, bilez û sadebûn in. Dema ku bi me re têkilî daynin, em ji we daxwaz dikin ku hûn tenê agahdariyên pejirandî bidin û bi me re bixebitin da ku em pêşî li belavbûna agahdariyê derewîn bigirin.",
 
   "data.city_accommodation.title": "{{city}} cihên mayînê",
   "data.city_accommodation.subtitle": "Hemî cîhên li ser vê rûpelê bi têlefonê hatine verast kirin, ji bilî yên ku tê de hatine destnîşan kirin. Lêbelê, ji ber ku ev agahdarî dikare di nav çend rojan an jî demjimêran de biguhere, ji kerema xwe lêkolîna xwe bikin",
@@ -52,5 +52,5 @@
   "details": " Hûrgilî",
   "website": " Malper",
   "source": "Çavkaniyê",
-  "contact": "Têkelî"
+  "contact": "Têkilî"
 }
