Add not found error for nonexisting questions

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -40,6 +40,7 @@
   "data.vpn.subtitle": "تتيح لك الشّبكة الافْتراضيّة الخَاصَّة الوصول إلى  المواقع الإلكترونية المحجوبة",
   "data.container_pharmacy": "صيدليات الحاويات",
 
+  "notFound": "لم يتم العثور على الصفحة",
   "button.back": "السابق",
   "button.language": "تغيير",
   "button.google_maps": "رابط خرائط جوجل",
