--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -40,6 +40,7 @@
   "data.vpn.subtitle": "VPN allows you to access blocked sites.",
   "data.container_pharmacy": "Container Pharmacy",
 
+  "notFound": "Page not found",
   "button.back": "Back",
   "button.language": "Change Language",
   "button.google_maps": "Google Maps Link",
