--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -33,7 +33,7 @@
   "data_blood_donation": "نقاط الهلال الأحمر للتبرع بالدم",
   "data.vpn.title": "يمكنك استخدام الشبكات الافتراضية الخاصة المجانية التالية للاتصال بالإنترنت",
   "data.vpn.subtitle": "تتيح لك الشّبكة الافْتراضيّة الخَاصَّة الوصول إلى  المواقع الإلكترونية المحجوبة",
-  "data.container_pharmacy": "",
+  "data.container_pharmacy": "صيدليات الحاويات",
 
   "button.back": "السابق",
   "button.language": "تغيير",
