--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -33,7 +33,7 @@
   "data_blood_donation": "Cihên bo bexşîna xwînê",
   "data.vpn.title": "Hûn bo înternetê karin VPNên belaş yên li jêr bikar bînin",
   "data.vpn.subtitle": " VPN dihêle hûn bigihîjin malperên astengkirî.",
-  "data.container_pharmacy": "",
+  "data.container_pharmacy": "Dermanxaneyên Seyare",
 
   "button.back": "paş",
   "button.language": "Ziman biguherîne",
