Group main menu buttons by categories

--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -5,6 +5,11 @@
   "page.about.body.1": "afetbilgi.com malperek e ku ji aliyê komek xwendekar û mezûnên ODTU ve hatiye amadekirin da ku di têkoşîna li dijî Erdheja 6ê Sibata 2023-an a Bazarcixê de agahiyên girîng verast bike û ewan bi mexdûrên karesatê  û yên ku dixwazin alîkariyê bidin re parve bike.",
   "page.about.body.2": "Prensîbên bingehîn ên malperê, ku li ser bingehek bi tevahî ji hêla mirovan ve hatî çêkirin, rastbûn, bilez û sadebûn in. Dema ku bi me re têkilî daynin, em ji we daxwaz dikin ku hûn tenê agahdariyên pejirandî bidin û bi me re bixebitin da ku em pêşî li belavbûna agahdariyê derewîn bigirin.",
 
+  "category.victim.name": "Depremzedeler İçin",
+  "category.helper.name": "Yardım Etmek İsteyenler İçin",
+  "category.resources.name": "Önemli Kaynaklar",
+  "category.other.name": "Diğer",
+
   "data.city_accommodation.title": "{{city}} cihên mayînê",
   "data.city_accommodation.subtitle": "Hemî cîhên li ser vê rûpelê bi têlefonê hatine verast kirin, ji bilî yên ku tê de hatine destnîşan kirin. Lêbelê, ji ber ku ev agahdarî dikare di nav çend rojan an jî demjimêran de biguhere, ji kerema xwe lêkolîna xwe bikin",
   "data.city_accommodation.explanation": "ragihand ku ew ê ji bo mexdûrên erdhejê cihan peyda bikin",
