--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -5,6 +5,11 @@
   "page.about.body.1": "afetbilgi.com is a website prepared by a group of METU students and graduates to verify important information in the fight against the 6 February 2023 Pazarcık Earthquake and to deliver it to both disaster victims and those who want to help.",
   "page.about.body.2": "The basic principles of the website, which is based on a completely human-made database, are accuracy, speed, and simplicity. When contacting us, we ask you to provide only confirmed information and to work with us to prevent the spread of false information.",
 
+  "category.victim.name": "For Earthquake Victims",
+  "category.helper.name": "To Help",
+  "category.resources.name": "Important Resources",
+  "category.other.name": "Other",
+
   "data.city_accommodation.title": "Places to stay in {{city}}",
   "data.city_accommodation.subtitle": "All locations on this page have been verified by phone, except those mentioned in it. However, since this information can change within days or even hours, you are kindly requested to do your own research.",
   "data.city_accommodation.explanation": "stated that it will provide accommodation for earthquake victims.",
