--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -46,6 +46,7 @@
   "button.back": "السابق",
   "button.language": "تغيير",
   "button.google_maps": "رابط خرائط جوجل",
+  "button.download": "تنزيل كملف PDF",
   "last_update": "اخر تحديث",
   "name": "اسم",
   "map": "خَرِيطَة",
