--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -46,6 +46,7 @@
   "button.back": "Back",
   "button.language": "Change Language",
   "button.google_maps": "Google Maps Link",
+  "button.download": "Download as PDF",
   "last_update": "Last Update",
   "name": "Name",
   "map": "Map",
