--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -46,6 +46,7 @@
   "button.back": "paş",
   "button.language": "Ziman biguherîne",
   "button.google_maps": "Girêdana Google Mapsê ",
+  "button.download": "Wekî PDF dakêşin",
   "last_update": "nûvekirina dawîn",
   "name": "Nav",
   "map": "Qert",
