--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -46,7 +46,7 @@
   "button.back": "Geri",
   "button.language": "Dili Değiştir",
   "button.google_maps": "Google Maps Linki",
-  "button.download": "PDF Olarak İndir",
+  "button.download": "PDF Olarak İndİr",
   "last_update": "Son güncelleme",
   "name": "İsim",
   "map": "Harita",
