finish evacuation points

--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -41,6 +41,7 @@
   "data.vpn.title": "يمكنك استخدام الشبكات الافتراضية الخاصة المجانية التالية للاتصال بالإنترنت",
   "data.vpn.subtitle": "تتيح لك الشّبكة الافْتراضيّة الخَاصَّة الوصول إلى  المواقع الإلكترونية المحجوبة",
   "data.container_pharmacy": "صيدليات الحاويات",
+  "data.evacuation_points.title": "{{city}} نقاط الإخلاء",
 
   "notFound": "لم يتم العثور على الصفحة",
   "button.back": "السابق",
