--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -41,6 +41,7 @@
   "data.vpn.title": "Hûn bo înternetê karin VPNên belaş yên li jêr bikar bînin",
   "data.vpn.subtitle": " VPN dihêle hûn bigihîjin malperên astengkirî.",
   "data.container_pharmacy": "Dermanxaneyên Seyare",
+  "data.evacuation_points.title": "Li Bajarê {{city}} Xalên Tehliyeyê",
 
   "notFound": "Rûpel nehat dîtin",
   "button.back": "paş",
