--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -42,6 +42,8 @@
   "data.vpn.title": "İnternete bağlanmak için aşağıdaki ücretsiz VPN'leri kullanabilirsiniz.",
   "data.vpn.subtitle": "VPN bloklanan sitelere girmenizi sağlar.",
   "data.evacuation_points.title": "{{city}} Şehrinde Tahliye Noktaları",
+  "data.donation.title": "Para Bağışı Yapabileceğiniz Kurum ve Kuruluşların Resmi Bağış Siteleri",
+  "data.donation.subtitle": "Bu sayfadaki kurum ve kuruluşların resmi bağış sitelerine aşağıdaki linklerden ulaşabilirsiniz.",
 
   "notFound": "Sayfa bulunamadı",
   "button.back": "Geri",
