--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -5,6 +5,12 @@
   "page.about.body.1": "afetbilgi.com bir grup ODTÜ öğrencisi ve mezunu tarafından hazırlanan, 6 Şubat 2023 Pazarcık Depremi ile mücadelede önemli bilgilerin doğrulanarak hem afetzedelere, hem de yardımcı olmak isteyenlere ulaştırılması için kurulmuş bir internet sitesidir.",
   "page.about.body.2": "Tamamen insan eliyle oluşturulan bir veri tabanına dayanan sitenin işleyişindeki temel prensipler doğruluk, hız, ve basitliktir. Bizimle iletişime geçerken, sizden yalnızca teyitli bilgileri iletmenizi, yanlış haberlerin yayılmasını engellemek için bizle birlikte çabalamanızı rica ederiz.",
 
+  "page.tooltip.depremyardim": "Depremzedeleri aramak ve yardım etmek için kullanabileceğiniz site.",
+  "page.tooltip.afetharita": "Yardım bildirimlerinin haritada gösterilmesi için kullanabileceğiniz site.",
+  "page.tooltip.depremio": "Depremzedelere erzak yardımı için kullanabileceğiniz site.",
+  "page.tooltip.discord": "Projelerimizi geliştirmek ve birbirimizle iletişim kurmak için kullandığımız Discord sunucusu.",
+
+
   "category.victim.name": "Depremzedeler İçin",
   "category.helper.name": "Yardım Etmek İsteyenler İçin",
   "category.resources.name": "Önemli Kaynaklar",
