create donation page

--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -42,6 +42,8 @@
   "data.vpn.subtitle": " VPN dihêle hûn bigihîjin malperên astengkirî.",
   "data.container_pharmacy": "Dermanxaneyên Seyare",
   "data.evacuation_points.title": "Li Bajarê {{city}} Xalên Tehliyeyê",
+  "data.donation.title": "Institution/Organization Donation Websites for Monetary Contributions",
+  "data.donation.subtitle": "Access Institution/Organization Donation Sites through links below.",
 
   "notFound": "Rûpel nehat dîtin",
   "button.back": "paş",
