--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -42,6 +42,8 @@
   "data.vpn.subtitle": "تتيح لك الشّبكة الافْتراضيّة الخَاصَّة الوصول إلى  المواقع الإلكترونية المحجوبة",
   "data.container_pharmacy": "صيدليات الحاويات",
   "data.evacuation_points.title": "{{city}} نقاط الإخلاء",
+  "data.donation.title": "Institution/Organization Donation Websites for Monetary Contributions",
+  "data.donation.subtitle": "Access Institution/Organization Donation Sites through links below.",
 
   "notFound": "لم يتم العثور على الصفحة",
   "button.back": "السابق",
