--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -42,6 +42,8 @@
   "data.vpn.subtitle": "VPN allows you to access blocked sites.",
   "data.container_pharmacy": "Container Pharmacy",
   "data.evacuation_points.title": "Evacuation Points in {{city}}",
+  "data.donation.title": "Institution/Organization Donation Websites for Monetary Contributions",
+  "data.donation.subtitle": "Access Institution/Organization Donation Sites through links below.",
 
   "notFound": "Page not found",
   "button.back": "Back",
