--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -47,6 +47,10 @@
   "data.vpn.subtitle": "VPN allows you to access blocked sites.",
   "data.container_pharmacy": "Container Pharmacy",
   "data.evacuation_points.title": "Evacuation Points in {{city}}",
+  "data.transportation.title": "Institutions Announced to Provide Transportation Aid",
+  "data.transportation.validationDate": "Validation Date",
+  "data.transportation.validityDate": "Validity",
+  "data.transportation.validityDate.explanation": "Valid until {{date}}",
 
   "notFound": "Page not found",
   "button.back": "Back",
