--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -48,6 +48,10 @@
   "data.vpn.title": "İnternete bağlanmak için aşağıdaki ücretsiz VPN'leri kullanabilirsiniz.",
   "data.vpn.subtitle": "VPN bloklanan sitelere girmenizi sağlar.",
   "data.evacuation_points.title": "{{city}} Şehrinde Tahliye Noktaları",
+  "data.transportation.title": "Ulaşım Yardımı Yapacağını Açıklayan Kurumlar",
+  "data.transportation.validationDate": "Doğrulanma Tarihi",
+  "data.transportation.validityDate": "Geçerlilik",
+  "data.transportation.validityDate.explanation": "{{date}} tarihine kadar geçerlidir.",
 
   "notFound": "Sayfa bulunamadı",
   "button.back": "Geri",
